assets/css/style.css
/* google fonts */
@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');

/* global */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* general */
body {
    background-color: #f6f6f6;
}

h1 {
    font-size: 250%;
}

h1,
h2 {
    margin: 15px;
    font-family: "Montserrat", sans-serif;
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
}

footer {
    position: absolute;
    bottom: 0;
    height: 50px;
    width: 100%;
    background-color: #aaa;
}

/* note section */
section {
    width: 30%;
    height: 600px;
    background-color: #9df3c4;
    margin: 50px;
    border-radius: 20px;
}

#notes-flex {
    display: flex;
    justify-content: center;
    width: 100%;
    height: 50%;
}

#to-do,
#completed {
    height: 550px;
    border-radius: 0 0 20px 20px;
}

#to-do {
    background-color: #62d2a2;
}

#completed {
    background-color: #1fab89;
}

